# CyberLab-Assistant

./: .dockerignore  .env.example  .gitignore  README.md  Taskfile.yml  cla_terminal_first_complete_development_spec.html  go.work  go.work.sum  pnpm-lock.yaml  pyproject.toml  题库要求.md
.github/workflows/: ci.yml
apps/web/: Dockerfile  next-env.d.ts  next.config.js  package.json  tsconfig.json
content/challenge-blueprints/: authoritative-catalog.yaml
content/test-fixtures/: oracle_observation.json
deploy/compose/: docker-compose.yml
scripts/: restart-local-dev.sh  stop-local-dev.sh
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_core.py  0002_local_auth.py  0003_challenge_artifacts.py  0004_challenge_bank_items.py
services/api/src/cla/: __init__.py  agent_runtime.py  authoring.py  challenge_assets.py  challenge_catalog.py  content_validation.py  database.py  dev_tokens.py  events.py  grading.py  ids.py  main.py  models.py  oracle.py  schemas.py  security.py  seed.py  settings.py  tickets.py  transcripts.py  tutor.py
services/api/tests/: conftest.py  test_alembic_migrations.py  test_authoring.py  test_challenge_bank.py  test_compose_contract.py  test_content_validation.py  test_contract_fixtures.py  test_contract_schemas.py  test_course_assignment.py  test_event_ingest.py  test_local_auth.py  test_oidc_jwks.py  test_settings.py  test_teacher_monitor.py  test_terminal_vertical_slice.py  test_tutor.py
tools/: build_user_manuals.py  generate_authoritative_blueprint_catalog.py
(+127 files in other folders)
